--- a/css/home.css
+++ b/css/home.css
@@ -23,7 +23,7 @@
     transform: translate(-50%,-50%);
     z-index: -1;
 
-    /* filter: blur(5px); */
+    filter: blur(5px);
 }
 
 .homeVideo img {
